--- a/de/intro.html
+++ b/de/intro.html
@@ -8,10 +8,13 @@
   <div>
     <p><strong>Projektteam:</strong></p>
     <p>
-      <a href="https://www.sebastianmeier.eu">Sebastian Meier</a> @ <a href="https://www.vislab.io">VISLAB.io</a>, Projektleitung und Entwicklung<br />
-      <a href="https://www.fabiandinklage.com">Fabian Dinklage</a>, Visualisierung und Entwicklung<br />
-      <a href="https://www.katringlinka.de">Katrin Glinka</a>, Inhalte und Evaluation
+      <a href="https://www.sebastianmeier.eu">Sebastian Meier</a><sup class="print"></sup> @ <a href="https://www.vislab.io">VISLAB.io</a><sup class="print"></sup>, Projektleitung und Entwicklung<br />
+      <a href="https://www.fabiandinklage.com">Fabian Dinklage</a><sup class="print"></sup>, Visualisierung und Entwicklung<br />
+      <a href="https://www.katringlinka.de">Katrin Glinka</a><sup class="print"></sup>, Inhalte und Evaluation
     </p>
+  </div>
+  <div style="font-size:12px;">
+    Hinweis: Dies ist die PDF-Version des Schlussberichts. Eine HTML-Variante finden Sie hier:<br /><a href="https://sebastian-meier.github.io/LoCobSS-documentation">https://sebastian-meier.github.io/LoCobSS-documentation</a>
   </div>
 </div>
 
