tech doku update

--- a/de/intro.html
+++ b/de/intro.html
@@ -14,7 +14,8 @@
     </p>
   </div>
   <div style="font-size:12px;">
-    Hinweis: Dies ist die PDF-Version des Schlussberichts. Eine HTML-Variante finden Sie hier:<br /><a href="https://sebastian-meier.github.io/LoCobSS-documentation">https://sebastian-meier.github.io/LoCobSS-documentation</a>
+    Hinweis: Dies ist die PDF-Version des Schlussberichts. Eine HTML-Variante finden Sie hier:<br /><a href="https://sebastian-meier.github.io/LoCobSS-documentation">https://sebastian-meier.github.io/LoCobSS-documentation</a><br /><br />
+    Aus Kosten- und Sicherheitsgründen sind manche Teile des Prototypen nicht öffentlich erreichbar. Sollten Sie Interesse an einem Zugang haben, schicken Sie bitte eine Email an: kontakt@sebastianmeier.eu.
   </div>
 </div>
 
